<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_lista"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_lista" />

    <item
        android:id="@+id/nav_facturas"
        android:icon="@drawable/ic_receipt"
        android:title="@string/nav_facturas" />

    <item
        android:id="@+id/nav_varios"
        android:icon="@drawable/ic_add_shopping_cart"
        android:title="@string/nav_varios" />

    <item
        android:id="@+id/nav_resumen"
        android:icon="@drawable/ic_resumen"
        android:title="@string/nav_resumen" />

    <item
        android:id="@+id/nav_estadisticas"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/nav_estadisticas" />

</menu>
