<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_shopping">

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.javito.shoplist.ui.shopping.ShoppingListFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.javito.shoplist.ui.purchase.AddPurchaseFragment"
        android:label="@string/title_add_purchase"
        tools:layout="@layout/fragment_add_purchase" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.javito.shoplist.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

</navigation>
